fix: [PFCSDEV-2] fixed extraneous white space

--- a/client/pfcs/src/app/shared/footer/footer.component.css
+++ b/client/pfcs/src/app/shared/footer/footer.component.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   padding: 2rem;
-  width: 100%;
   overflow-x: hidden;
   background-color: #151515;
   color: #EAEAEA;
